<resources>
    <string name="app_name">Elite Chefs</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_recipe_info">Recipe Info</string>
    <string name="title_ingredient_list">Ingredients List</string>
    <string name="title_step_list">Steps List</string>
    <string name="title_ingredient_info">Ingredient Info</string>
    <string name="title_step_info">Step Info</string>
    <string name="title_recipe_details">Recipe Details</string>
    <string name="title_create_recipe">Create Recipe</string>
    <string name="title_edit_recipe">Edit Recipe</string>
    <string name="title_add_Ingredient">Add Ingredient</string>
    <string name="title_add_step">Add Step</string>
    <string name="title_recipe_timing">Recipe Timing</string>
    <string name="title_new_post">New Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_update">Update Profile</string>
    <string name="title_following">Following</string>
    <string name="title_chat_list">Chat List</string>
    <string name="title_chat">Chat</string>
    <string name="title_newsfeed">Newsfeed</string>
    <!-- Action Buttons -->
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_more">Add More</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="follow">Follow</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deletion">Deletion</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>
    <!-- Common -->
    <string name="comments">Comments</string>
    <string name="posts">Posts</string>
    <string name="recipes">Recipes</string>
    <string name="hint_bio">Bio</string>
    <!-- Recipes -->
    <string name="preparing">preparing</string>
    <string name="resting">resting</string>
    <string name="baking">baking</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="ingredients">ingredients</string>
    <string name="timing_mins">Timing (mins)</string>
    <string name="recipe_graphic">Recipe graphic</string>
    <string name="steps">Steps</string>
    <string name="step_count">Step %d</string>
    <string name="step_info">Step Info</string>
    <string name="instruction">Instruction</string>
    <string name="rest_time">Rest Time</string>
    <string name="baking_time">Baking Time</string>
    <string name="prepare_time">Prepare Time</string>
    <!-- Recipes:Label/Message -->
    <string name="steps_required">Steps*</string>
    <string name="ingredients_required">Ingredients*</string>
    <string name="recipe_info_required">Recipe Info*</string>
    <string name="ingredients_info">Ingredients Info</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Description</string>
    <string name="uploading_graphic_for_respective_step">uploading graphic for respective step</string>
    <string name="warn_deleting_recipe_message">Deleting of recipe cannot be undone.</string>
    <string name="warn_delete_ingredient_message">Deleting of ingredient cannot be undone</string>
    <string name="warn_delete_step_message">Deleting of step cannot be undone</string>
    <string name="message_graphic_is_required">Graphic is required!</string>
    <string name="message_name_is_required">Name is required!</string>
    <string name="message_desc_is_required">Description is required!</string>
    <string name="hint_prepare_time_helper">Time spend actively prepare or cook the food</string>
    <string name="hint_baking_time_helper">Duration for the dish to be bake for</string>
    <string name="hint_rest_time_helper">Duration for the dish to be rest aside.</string>
    <string name="suffix_minutes">mins</string>

    <!-- Profile -->
    <string name="following">Following</string>
    <string name="following_count">%d Following</string>
    <string name="follower_count">%d Follower</string>
    <string name="follower">Follower</string>

    <string name="hint_message">Message</string>
    <string name="hint_want_to_share_anything">Want to share anything?</string>
    <string name="hint_display_name">Display Name</string>
    <string name="hint_leave_a_comment">Leave a comment</string>
    <string name="liked_recipe">Liked</string>
    <string name="choose_theme">Choose Theme</string>
</resources>