<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_recipes"
    app:startDestination="@id/newsfeed_list">

    <!-- Recipes Related -->
    <fragment
        android:id="@+id/recipe_list"
        android:name="ntu.platform.cookery.ui.fragment.recipe_list.RecipeListFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_addRecipeInfoFragment"
            app:destination="@id/addRecipeInfoFragment" />
        <action
            android:id="@+id/action_mainFragment_to_recipeDetailsFragment"
            app:destination="@id/recipeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRecipeInfoFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeInfoFragment"
        android:label="@string/title_recipe_info"
        tools:layout="@layout/fragment_add_recipe_info">
        <argument
            android:name="recipeId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_addRecipeInfoFragment_to_addRecipeTimingFragment"
            app:destination="@id/addRecipeTimingFragment" />
    </fragment>

    <fragment
        android:id="@+id/addRecipeTimingFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeTimingFragment"
        android:label="AddRecipeTimingFragment"
        tools:layout="@layout/fragment_add_recipe_timing" >
        <action
            android:id="@+id/action_addRecipeTimingFragment_to_addRecipeIngredientFragment"
            app:destination="@id/addRecipeIngredientFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRecipeIngredientFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeIngredientFragment"
        android:label="@string/title_ingredient_list"
        tools:layout="@layout/fragment_add_recipe_ingredient">
        <action
            android:id="@+id/action_addRecipeIngredientFragment_to_addRecipeStepsFragment"
            app:destination="@id/addRecipeStepsFragment" />
        <action
            android:id="@+id/action_addRecipeIngredientFragment_to_addRecipeIngredientInfoFragment"
            app:destination="@id/addRecipeIngredientInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRecipeStepsFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeStepFragment"
        android:label="@string/title_step_list"
        tools:layout="@layout/fragment_add_recipe_steps">
        <action
            android:id="@+id/action_addRecipeStepsFragment_to_recipeListFragment"
            app:destination="@id/recipe_list"
            app:popUpTo="@id/recipe_list"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_addRecipeStepsFragment_to_addRecipeStepInfoFragment"
            app:destination="@id/addRecipeStepInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/addRecipeIngredientInfoFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeIngredientInfoFragment"
        android:label="@string/title_ingredient_info"

        tools:layout="@layout/fragment_add_recipe_ingredient_info"/>
    <fragment
        android:id="@+id/addRecipeStepInfoFragment"
        android:name="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeStepInfoFragment"
        android:label="@string/title_step_info"
        tools:layout="@layout/fragment_add_recipe_steps_info"/>
    <fragment
        android:id="@+id/recipeDetailsFragment"
        android:name="ntu.platform.cookery.ui.fragment.recipe_details.RecipeDetailsFragment"
        android:label="@string/title_recipe_details"
        tools:layout="@layout/fragment_recipe_details">
        <argument
            android:name="recipeId"
            app:argType="string" />
        <action
            android:id="@+id/action_recipeDetailsFragment_to_addRecipeInfoFragment"
            app:destination="@id/addRecipeInfoFragment" />
    </fragment>




    <fragment
        android:id="@+id/newsfeed_list"
        android:name="ntu.platform.cookery.ui.fragment.newsfeed.NewsfeedFragment"
        android:label="@string/newsfeed"
        tools:layout="@layout/fragment_newsfeed" />

    <fragment
        android:id="@+id/profile"
        android:name="ntu.platform.cookery.ui.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>