<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeStepFragment"
        >

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/tool_bar_progress"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <TextView
                style="@style/Label"
                android:id="@+id/label_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_required"
                app:layout_constraintTop_toTopOf="parent"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_steps"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/label_steps"
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:listLiveData="@{viewModel.steps}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_step"/>

            <Button
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/btn_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>