<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeStepInfoFragment">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/tool_bar" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/margin_normal"
            android:paddingEnd="@dimen/margin_normal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_step_info"
                    style="@style/Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_info" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/frame_graphic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/graphic"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:contentDescription="@string/uploading_graphic_for_respective_step"
                        android:src="@drawable/ic_camera"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/instruction"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text|textMultiLine|textAutoCorrect"
                        android:text="@={viewModel.instruction}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>