<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ntu.platform.cookery.ui.fragment.recipe_details.RecipeDetailsViewModel" />

    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ntu.platform.cookery.ui.fragment.add_recipe.AddRecipeInfoFragment"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.NestedScrolling.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/white"
                app:statusBarScrim="@android:color/transparent"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:titleEnabled="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="250dp"
                    android:background="#f0f0f0"
                    android:src="@drawable/ic_launcher_foreground"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/recipe_graphic"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:loadWithGlide="@{viewModel.recipe.graphic}"
                    />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.NestedScrolling.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/margin_normal"
                android:paddingEnd="@dimen/margin_normal"
                >

                <TextView
                    style="@style/Label"
                    android:id="@+id/label_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.recipe.name}"
                    tools:text="Recipe name"
                    />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.recipe.description}"
                    tools:text="Descriptions"
                    />

                <TextView
                    style="@style/Label"
                    android:id="@+id/label_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timing_mins"
                    android:layout_marginTop="30dp"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/label_cooking"
                        style="@style/Label.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cooking"
                        app:layout_constraintEnd_toStartOf="@+id/label_resting"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_resting"
                        style="@style/Label.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resting"
                        app:layout_constraintEnd_toStartOf="@+id/label_baking"
                        app:layout_constraintStart_toEndOf="@+id/label_cooking"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_baking"
                        style="@style/Label.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baking"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/label_resting"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/time_cooking"
                        style="@style/TimingText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.recipe.timePrepareMin)}"
                        app:layout_constraintEnd_toEndOf="@+id/label_cooking"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/label_cooking"
                        app:layout_constraintTop_toBottomOf="@+id/label_cooking"
                        tools:text="10" />

                    <TextView
                        style="@style/TimingText"
                        android:id="@+id/time_resting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.recipe.timeRestMin)}"
                        app:layout_constraintEnd_toEndOf="@+id/label_resting"
                        app:layout_constraintStart_toStartOf="@+id/label_resting"
                        app:layout_constraintTop_toBottomOf="@+id/label_resting"
                        tools:text="10" />

                    <TextView
                        style="@style/TimingText"
                        android:id="@+id/time_baking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Integer.toString(viewModel.recipe.timeBakingMin)}"
                        app:layout_constraintEnd_toEndOf="@+id/label_baking"
                        app:layout_constraintStart_toStartOf="@+id/label_baking"
                        app:layout_constraintTop_toBottomOf="@+id/label_baking"
                        tools:text="10" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    style="@style/Label"
                    android:id="@+id/label_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:layout_marginTop="30dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/item_ingredient"/>

                <TextView
                    style="@style/Label"
                    android:id="@+id/label_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:layout_marginTop="30dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/item_step_large"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>